--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,25 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_data_root = Path('<your folder>')\n",
+    "local_data_root = Path('/Users/alextaim/data/ccb')\n",
     "\n",
     "raw_folder = local_data_root.joinpath('raw')\n",
     "slim_folder = local_data_root.joinpath('slim')\n",
     "sample_folder = local_data_root.joinpath('sample')\n",
-    "predict_folder = local_data_root.joinpath('predict')"
+    "predict_folder = local_data_root.joinpath('predict.pickle')\n",
+    "estimate_folder = local_data_root.joinpath('estimate.pickle')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = [<some files from raw folder>]"
+    "files = ['/Users/alextaim/data/ccb/raw/01.json']"
    ]
   },
   {
@@ -48,46 +49,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "display_data",
      "data": {
+      "text/plain": "HBox(children=(HTML(value='Total'), FloatProgress(value=0.0, max=1.0), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c492948474f1492892f7d2e2d5ab1bfa",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Total'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
-      ]
+       "version_minor": 0,
+       "model_id": "cab6c243109f4dfe8ded1083fc41680e"
+      }
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     },
     {
+     "output_type": "display_data",
      "data": {
+      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1.0), HTML(value='')))",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ce9ffa6c4fc453a976f44831d6fbf27",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
-      ]
+       "version_minor": 0,
+       "model_id": "8a7ec434fee744dfafaa5fc2cd403fcd"
+      }
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['/Users/alextaim/data/.vw_cache/cache-p/f70c85ace19b22cd7f9b7d447761ecf0']"
+       "['/Users/alextaim/data/.vw_cache/cache-p/b2cd6f5f6d8927dd04d7cd89dac431db']"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
    "source": [
@@ -124,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,18 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['/Users/alextaim/data/ccb/slim/01.json']"
+       "[PosixPath('/Users/alextaim/data/ccb/slim/01.json')]"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
    "source": [
@@ -167,18 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['/Users/alextaim/data/ccb/sample/01.json']"
+       "[PosixPath('/Users/alextaim/data/ccb/sample/01.json')]"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
    "source": [
@@ -202,18 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['/Users/alextaim/data/ccb/predict/01.json']"
+       "[PosixPath('/Users/alextaim/data/ccb/predict.pickle/01.json')]"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 8
     }
    ],
    "source": [
@@ -222,7 +219,7 @@
     "\n",
     "predictor = Predictor(filters=[lambda l: True])\n",
     "pipeline = FilesPipeline()\n",
-    "cfe = pipeline.lines_2_lines(slim, predictor.predict, path_gen=Mapper(raw_folder, predict_folder), process=True)\n",
+    "cfe = pipeline.lines_2_df_pickle(slim, predictor.predict_df, path_gen=Mapper(slim_folder, predict_folder), process=True)\n",
     "cfe"
    ]
   },
@@ -235,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +243,7 @@
     "\n",
     "pipeline = FilesPipeline()\n",
     "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'baseline1_old': ['ccb|snips|0'], 'random': ['ccb|snips|0']}, online_estimator = 'ccb|ips|0')\n",
-    "preestimates = pipeline.ndjson_2_csv(cfe, lambda objects: estimator.preestimate(objects, '1min'), path_gen=lambda p: p.replace('predict', 'estimate'), process=True)\n"
+    "preestimates = pipeline.df_pickle_2_df_pickle(cfe, lambda objects: estimator.preestimate_df(objects, '1min'), path_gen=Mapper(predict_folder, estimate_folder), process=True)\n"
    ]
   },
   {
@@ -258,109 +255,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>(online, ccb|ips|0, e)</th>\n",
-       "      <th>(baseline1_old, ccb|snips|0, e)</th>\n",
-       "      <th>(random, ccb|snips|0, e)</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>t</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:09:00+00:00</th>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.319149</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:10:00+00:00</th>\n",
-       "      <td>0.090909</td>\n",
-       "      <td>0.090909</td>\n",
-       "      <td>0.088975</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:11:00+00:00</th>\n",
-       "      <td>0.091787</td>\n",
-       "      <td>0.071429</td>\n",
-       "      <td>0.090767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:12:00+00:00</th>\n",
-       "      <td>0.099622</td>\n",
-       "      <td>0.141935</td>\n",
-       "      <td>0.084033</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:13:00+00:00</th>\n",
-       "      <td>0.103704</td>\n",
-       "      <td>0.086580</td>\n",
-       "      <td>0.082170</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
        "                           (online, ccb|ips|0, e)  \\\n",
        "t                                                   \n",
-       "2021-03-27 17:09:00+00:00                0.333333   \n",
-       "2021-03-27 17:10:00+00:00                0.090909   \n",
-       "2021-03-27 17:11:00+00:00                0.091787   \n",
-       "2021-03-27 17:12:00+00:00                0.099622   \n",
-       "2021-03-27 17:13:00+00:00                0.103704   \n",
+       "2021-03-27 17:08:00+00:00                0.333333   \n",
+       "2021-03-27 17:10:00+00:00                0.091575   \n",
+       "2021-03-27 17:12:00+00:00                0.101002   \n",
        "\n",
-       "                           (baseline1_old, ccb|snips|0, e)  \\\n",
-       "t                                                            \n",
-       "2021-03-27 17:09:00+00:00                         0.333333   \n",
-       "2021-03-27 17:10:00+00:00                         0.090909   \n",
-       "2021-03-27 17:11:00+00:00                         0.071429   \n",
-       "2021-03-27 17:12:00+00:00                         0.141935   \n",
-       "2021-03-27 17:13:00+00:00                         0.086580   \n",
+       "                           (b, random, ccb|snips|0, e)  \\\n",
+       "t                                                        \n",
+       "2021-03-27 17:08:00+00:00                     0.319149   \n",
+       "2021-03-27 17:10:00+00:00                     0.090595   \n",
+       "2021-03-27 17:12:00+00:00                     0.083387   \n",
        "\n",
-       "                           (random, ccb|snips|0, e)  \n",
-       "t                                                    \n",
-       "2021-03-27 17:09:00+00:00                  0.319149  \n",
-       "2021-03-27 17:10:00+00:00                  0.088975  \n",
-       "2021-03-27 17:11:00+00:00                  0.090767  \n",
-       "2021-03-27 17:12:00+00:00                  0.084033  \n",
-       "2021-03-27 17:13:00+00:00                  0.082170  "
-      ]
+       "                           (b, baseline1_old, ccb|snips|0, e)  \n",
+       "t                                                              \n",
+       "2021-03-27 17:08:00+00:00                            0.333333  \n",
+       "2021-03-27 17:10:00+00:00                            0.080000  \n",
+       "2021-03-27 17:12:00+00:00                            0.108808  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>(online, ccb|ips|0, e)</th>\n      <th>(b, random, ccb|snips|0, e)</th>\n      <th>(b, baseline1_old, ccb|snips|0, e)</th>\n    </tr>\n    <tr>\n      <th>t</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-03-27 17:08:00+00:00</th>\n      <td>0.333333</td>\n      <td>0.319149</td>\n      <td>0.333333</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:10:00+00:00</th>\n      <td>0.091575</td>\n      <td>0.090595</td>\n      <td>0.080000</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:12:00+00:00</th>\n      <td>0.101002</td>\n      <td>0.083387</td>\n      <td>0.108808</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 21,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
    "source": [
-    "baseline_preestimates = pd.concat([estimator.read_preestimate(p) for p in preestimates])\n",
+    "baseline_preestimates = pd.concat([pd.read_pickle(p) for p in preestimates])\n",
     "baseline_stats = evaluate(baseline_preestimates.resample('1min').sum())\n",
     "baseline_stats"
    ]
@@ -374,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,77 +315,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>(cfe, ccb|snips|0, e)</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>t</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:09:00+00:00</th>\n",
-       "      <td>0.320513</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:10:00+00:00</th>\n",
-       "      <td>0.108569</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:11:00+00:00</th>\n",
-       "      <td>0.086635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:12:00+00:00</th>\n",
-       "      <td>0.131921</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:13:00+00:00</th>\n",
-       "      <td>0.161565</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           (cfe, ccb|snips|0, e)\n",
-       "t                                               \n",
-       "2021-03-27 17:09:00+00:00               0.320513\n",
-       "2021-03-27 17:10:00+00:00               0.108569\n",
-       "2021-03-27 17:11:00+00:00               0.086635\n",
-       "2021-03-27 17:12:00+00:00               0.131921\n",
-       "2021-03-27 17:13:00+00:00               0.161565"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "baseline_preestimates = pd.concat([estimator.read_preestimate(p) for p in preestimates])\n",
     "cfe_stats = evaluate(baseline_preestimates.resample('1min').sum())\n",
@@ -474,116 +333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>(online, ccb|ips|0, e)</th>\n",
-       "      <th>(baseline1_old, ccb|snips|0, e)</th>\n",
-       "      <th>(random, ccb|snips|0, e)</th>\n",
-       "      <th>(cfe, ccb|snips|0, e)</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>t</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:09:00+00:00</th>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.319149</td>\n",
-       "      <td>0.320513</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:10:00+00:00</th>\n",
-       "      <td>0.090909</td>\n",
-       "      <td>0.090909</td>\n",
-       "      <td>0.088975</td>\n",
-       "      <td>0.108569</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:11:00+00:00</th>\n",
-       "      <td>0.091787</td>\n",
-       "      <td>0.071429</td>\n",
-       "      <td>0.090767</td>\n",
-       "      <td>0.086635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:12:00+00:00</th>\n",
-       "      <td>0.099622</td>\n",
-       "      <td>0.141935</td>\n",
-       "      <td>0.084033</td>\n",
-       "      <td>0.131921</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-27 17:13:00+00:00</th>\n",
-       "      <td>0.103704</td>\n",
-       "      <td>0.086580</td>\n",
-       "      <td>0.082170</td>\n",
-       "      <td>0.161565</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           (online, ccb|ips|0, e)  \\\n",
-       "t                                                   \n",
-       "2021-03-27 17:09:00+00:00                0.333333   \n",
-       "2021-03-27 17:10:00+00:00                0.090909   \n",
-       "2021-03-27 17:11:00+00:00                0.091787   \n",
-       "2021-03-27 17:12:00+00:00                0.099622   \n",
-       "2021-03-27 17:13:00+00:00                0.103704   \n",
-       "\n",
-       "                           (baseline1_old, ccb|snips|0, e)  \\\n",
-       "t                                                            \n",
-       "2021-03-27 17:09:00+00:00                         0.333333   \n",
-       "2021-03-27 17:10:00+00:00                         0.090909   \n",
-       "2021-03-27 17:11:00+00:00                         0.071429   \n",
-       "2021-03-27 17:12:00+00:00                         0.141935   \n",
-       "2021-03-27 17:13:00+00:00                         0.086580   \n",
-       "\n",
-       "                           (random, ccb|snips|0, e)  (cfe, ccb|snips|0, e)  \n",
-       "t                                                                           \n",
-       "2021-03-27 17:09:00+00:00                  0.319149               0.320513  \n",
-       "2021-03-27 17:10:00+00:00                  0.088975               0.108569  \n",
-       "2021-03-27 17:11:00+00:00                  0.090767               0.086635  \n",
-       "2021-03-27 17:12:00+00:00                  0.084033               0.131921  \n",
-       "2021-03-27 17:13:00+00:00                  0.082170               0.161565  "
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_stats = baseline_stats.join(cfe_stats)"
    ]
@@ -591,9 +345,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python38564bitfd59076926044bd899f4541e1d3f6749",
+   "display_name": "Python 3.8.6 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -605,7 +358,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.8.6-final"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
