--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Pipeline.dataflow import FilesPipeline\n",
     "from Pipeline.ccb.dsjson.processor import Processor\n",
     "from Pipeline.ccb.dsjson.predictions import Predictor\n",
-    "from Pipeline.progress import tqdm_progress\n",
     "from Pipeline import azure_blob_logs\n",
     "from Pipeline.utils import Mapper\n",
+    "from Pipeline.dataflow import MultilineFiles, PickleFiles, CsvFiles\n",
     "\n",
     "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +27,20 @@
     "slim_folder = local_data_root.joinpath('slim')\n",
     "sample_folder = local_data_root.joinpath('sample')\n",
     "predict_folder = local_data_root.joinpath('predict.pickle')\n",
-    "estimate_folder = local_data_root.joinpath('estimate.pickle')"
+    "baseline_predict_folder = local_data_root.joinpath('baseline.predict')\n",
+    "baseline_estimate_folder = local_data_root.joinpath('baseline.estimate')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ['/Users/alextaim/data/ccb/raw/01.json']"
+    "files = ['/Users/alextaim/data/ccb/raw/01.json',\n",
+    "    '/Users/alextaim/data/ccb/raw/02.json']\n",
+    "\n",
+    "raw = MultilineFiles(files)"
    ]
   },
   {
@@ -49,44 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value='Total'), FloatProgress(value=0.0, max=1.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "cab6c243109f4dfe8ded1083fc41680e"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1.0), HTML(value='')))",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "8a7ec434fee744dfafaa5fc2cd403fcd"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['/Users/alextaim/data/.vw_cache/cache-p/b2cd6f5f6d8927dd04d7cd89dac431db']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
+   "outputs": [],
    "source": [
     "from VwPipeline import Loggers, Handlers\n",
     "from VwPipeline.VwCache import VwCache\n",
@@ -105,10 +73,11 @@
     "    )\n",
     "\n",
     "opts = pd.DataFrame(product(\n",
-    "    dimension('#base', ['--ccb_explore_adf --dsjson --compressed --synthcover --power_t 0  -P 1 --preserve_performance_counters --save_resume']),\n",
+    "    dimension('#base', ['--ccb_explore_adf --dsjson   -P 1 --preserve_performance_counters --save_resume']),\n",
+    "    dimension('#learning', ['--coin']),\n",
     "))\n",
     "preds = vw.train(files, opts, ['-p'])\n",
-    "prediction_files = preds.iloc[0]['!Outputs']['-p']\n",
+    "prediction_files = {preds.iloc[0]['!Job'].name: preds.iloc[0]['!Outputs']['-p']}\n",
     "prediction_files"
    ]
   },
@@ -121,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,29 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[PosixPath('/Users/alextaim/data/ccb/slim/01.json')]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from Pipeline.dataflow import FilesPipeline\n",
     "from Pipeline.ccb.dsjson.processor import Processor\n",
     "\n",
     "processor = Processor()\n",
-    "pipeline = FilesPipeline()\n",
-    "\n",
-    "slim = pipeline.lines_2_lines(files, processor.process, path_gen=Mapper(raw_folder, slim_folder), process=True)\n",
-    "slim"
+    "slim = MultilineFiles().init(raw.process(processor.process, path_gen=Mapper(raw_folder, slim_folder), process=True))"
    ]
   },
   {
@@ -164,30 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[PosixPath('/Users/alextaim/data/ccb/sample/01.json')]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 7
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from Pipeline.dataflow import FilesPipeline\n",
-    "from Pipeline.ccb.dsjson.processor import Processor\n",
+    "\n",
     "from Pipeline.filters import UniformSampler\n",
+    "from Pipeline.ccb.dsjson.processor import Processor\n",
     "\n",
     "sampler = UniformSampler(0.5)\n",
-    "\n",
     "processor = Processor(filters=[lambda l: sampler.do(l)])\n",
-    "result = pipeline.lines_2_lines(files, processor.process, path_gen=Mapper(raw_folder, sample_folder), process=True)\n",
-    "result"
+    "sample = MultilineFiles().init(raw.process(processor.process, path_gen=Mapper(raw_folder, sample_folder), process=True))"
    ]
   },
   {
@@ -199,28 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[PosixPath('/Users/alextaim/data/ccb/predict.pickle/01.json')]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from Pipeline.dataflow import FilesPipeline\n",
     "from Pipeline.ccb.dsjson.predictions import Predictor\n",
     "\n",
     "predictor = Predictor(filters=[lambda l: True])\n",
-    "pipeline = FilesPipeline()\n",
-    "cfe = pipeline.lines_2_df_pickle(slim, predictor.predict_df, path_gen=Mapper(slim_folder, predict_folder), process=True)\n",
-    "cfe"
+    "baseline_preds = PickleFiles().init(raw.process(predictor.predict_df, path_gen=Mapper(raw_folder, baseline_predict_folder), process=True))"
    ]
   },
   {
@@ -232,18 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Pipeline.dataflow import FilesPipeline\n",
     "from Pipeline.estimators import Estimator, evaluate\n",
     "import Pipeline.ccb.estimators\n",
     "import json\n",
     "\n",
     "pipeline = FilesPipeline()\n",
-    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'baseline1_old': ['ccb|snips|0'], 'random': ['ccb|snips|0']}, online_estimator = 'ccb|ips|0')\n",
-    "preestimates = pipeline.df_pickle_2_df_pickle(cfe, lambda objects: estimator.preestimate_df(objects, '1min'), path_gen=Mapper(predict_folder, estimate_folder), process=True)\n"
+    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'baseline1_old': ['ccb|snips|0'], 'random': ['ccb|snips|0']}, online_estimator = 'ccb|ips|0', window='1min')\n",
+    "baseline_preestimates = PickleFiles().init(baseline_preds.process(estimator.preestimate_df, path_gen=Mapper(baseline_predict_folder, baseline_estimate_folder), process=True))\n"
    ]
   },
   {
@@ -255,48 +181,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                           (online, ccb|ips|0, e)  \\\n",
-       "t                                                   \n",
-       "2021-03-27 17:08:00+00:00                0.333333   \n",
-       "2021-03-27 17:10:00+00:00                0.091575   \n",
-       "2021-03-27 17:12:00+00:00                0.101002   \n",
-       "\n",
-       "                           (b, random, ccb|snips|0, e)  \\\n",
-       "t                                                        \n",
-       "2021-03-27 17:08:00+00:00                     0.319149   \n",
-       "2021-03-27 17:10:00+00:00                     0.090595   \n",
-       "2021-03-27 17:12:00+00:00                     0.083387   \n",
-       "\n",
-       "                           (b, baseline1_old, ccb|snips|0, e)  \n",
-       "t                                                              \n",
-       "2021-03-27 17:08:00+00:00                            0.333333  \n",
-       "2021-03-27 17:10:00+00:00                            0.080000  \n",
-       "2021-03-27 17:12:00+00:00                            0.108808  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>(online, ccb|ips|0, e)</th>\n      <th>(b, random, ccb|snips|0, e)</th>\n      <th>(b, baseline1_old, ccb|snips|0, e)</th>\n    </tr>\n    <tr>\n      <th>t</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-03-27 17:08:00+00:00</th>\n      <td>0.333333</td>\n      <td>0.319149</td>\n      <td>0.333333</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:10:00+00:00</th>\n      <td>0.091575</td>\n      <td>0.090595</td>\n      <td>0.080000</td>\n    </tr>\n    <tr>\n      <th>2021-03-27 17:12:00+00:00</th>\n      <td>0.101002</td>\n      <td>0.083387</td>\n      <td>0.108808</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 12
-    }
-   ],
+   "outputs": [],
    "source": [
-    "baseline_preestimates = pd.concat([pd.read_pickle(p) for p in preestimates])\n",
-    "baseline_stats = evaluate(baseline_preestimates.resample('1min').sum())\n",
-    "baseline_stats"
+    "evaluate(baseline_preestimates.open().resample('2min').sum())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "# Evaluate predictions from vw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Pipeline.ccb.vw import predictions\n",
+    "cfe_folder = local_data_root.joinpath('cfe.pickle')\n",
+    "policy_name = '--coin'\n",
+    "vw_pred_openers = list(map(lambda p: (lambda f: predictions.lines_2_predictions(open(p), pd.read_pickle(f), policy_name)), prediction_files[policy_name]))\n",
+    "\n",
+    "pipeline = FilesPipeline()\n",
+    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'cfe': ['ccb|snips|0'] })\n",
+    "preestimates = pipeline.df_pickle_2_df_pickle(cfe, lambda objects: estimator.preestimate_df(objects, '1min'), path_gen=Mapper(predict_folder, cfe_folder), process=True, openers=vw_pred_openers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Pipeline.ccb.vw import predictions\n",
+    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'--coin': ['ccb|snips|0'] })\n",
+    "p = predictions.lines_2_predictions_df(open(prediction_files['--coin'][0]), pd.read_pickle(cfe[0]), '--coin')\n",
+    "p"
    ]
   },
   {
