--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -10,7 +10,7 @@
     "from Pipeline.ccb.dsjson.predictions import Predictor\n",
     "from Pipeline import azure_blob_logs\n",
     "from Pipeline.utils import Mapper\n",
-    "from Pipeline.dataflow import MultilineFiles, PickleFiles, CsvFiles\n",
+    "from Pipeline.dataflow import MultilineFiles, PickleFiles, CsvFiles, Fileset\n",
     "\n",
     "from pathlib import Path"
    ]
@@ -22,13 +22,15 @@
    "outputs": [],
    "source": [
     "local_data_root = Path('/Users/alextaim/data/ccb')\n",
+    "vw_cache_folder = Path('/Users/alextaim/data/.vw_cache')\n",
     "\n",
     "raw_folder = local_data_root.joinpath('raw')\n",
     "slim_folder = local_data_root.joinpath('slim')\n",
     "sample_folder = local_data_root.joinpath('sample')\n",
     "predict_folder = local_data_root.joinpath('predict.pickle')\n",
     "baseline_predict_folder = local_data_root.joinpath('baseline.predict')\n",
-    "baseline_estimate_folder = local_data_root.joinpath('baseline.estimate')"
+    "baseline_estimate_folder = local_data_root.joinpath('baseline.estimate')\n",
+    "cfe_estimate_folder = local_data_root.joinpath('cfe.estimate')"
    ]
   },
   {
@@ -65,7 +67,7 @@
     "#your vw path\n",
     "vw_path = r'vw'\n",
     "\n",
-    "cache = VwCache(r'/Users/alextaim/data/.vw_cache')\n",
+    "cache = VwCache(vw_cache_folder)\n",
     "vw = Vw(\n",
     "    vw_path,\n",
     "    cache,\n",
@@ -167,8 +169,7 @@
     "import Pipeline.ccb.estimators\n",
     "import json\n",
     "\n",
-    "pipeline = FilesPipeline()\n",
-    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'baseline1_old': ['ccb|snips|0'], 'random': ['ccb|snips|0']}, online_estimator = 'ccb|ips|0', window='1min')\n",
+    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'baseline1_old': ['ccb|ips_snips|0'], 'random': ['ccb|ips_snips|0']}, online_estimator = 'ccb|ips_snips|0', window='1min')\n",
     "baseline_preestimates = PickleFiles().init(baseline_preds.process(estimator.preestimate_df, path_gen=Mapper(baseline_predict_folder, baseline_estimate_folder), process=True))\n"
    ]
   },
@@ -185,7 +186,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate(baseline_preestimates.open().resample('2min').sum())"
+    "df = baseline_preestimates.open().resample('2min').sum()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.iloc[0][\"('online', 'ccb|ips_snips|0')\"].get(type='snips')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['online'] = df.apply(lambda r: r[\"('online', 'ccb|ips_snips|0')\"].get('ips')['e'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['online'].plot()"
    ]
   },
   {
@@ -203,13 +232,33 @@
    "outputs": [],
    "source": [
     "from Pipeline.ccb.vw import predictions\n",
-    "cfe_folder = local_data_root.joinpath('cfe.pickle')\n",
+    "\n",
+    "class VwPredicionsFiles(Fileset):\n",
+    "    def _read(self, i, path):\n",
+    "        print(f'{i}: {path}')\n",
+    "        labels = self.label_fileset.read(i)\n",
+    "        labels['_tmp'] = list(predictions.lines_2_slots(open(path)))\n",
+    "        labels[('b', policy_name)] = labels.apply(lambda r: [ap[1][ap[0]] for ap in zip(r['a'], r['_tmp'])], axis = 1)\n",
+    "        return labels[['t', 'a', 'r', 'p', 'n', ('b', policy_name)]]        \n",
+    "\n",
+    "    @staticmethod\n",
+    "    def _write(path, o):\n",
+    "        raise Exception('Not supported')\n",
+    "\n",
+    "    def __init__(self, files, label_fileset, policy_name):\n",
+    "        super().__init__(files=files, reader=self._read, writer=VwPredicionsFiles._write)\n",
+    "        self.label_fileset = label_fileset\n",
+    "        self.policy_name = policy_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "policy_name = '--coin'\n",
-    "vw_pred_openers = list(map(lambda p: (lambda f: predictions.lines_2_predictions(open(p), pd.read_pickle(f), policy_name)), prediction_files[policy_name]))\n",
-    "\n",
-    "pipeline = FilesPipeline()\n",
-    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'cfe': ['ccb|snips|0'] })\n",
-    "preestimates = pipeline.df_pickle_2_df_pickle(cfe, lambda objects: estimator.preestimate_df(objects, '1min'), path_gen=Mapper(predict_folder, cfe_folder), process=True, openers=vw_pred_openers)\n"
+    "coin_predictions = prediction_files[policy_name]"
    ]
   },
   {
@@ -218,10 +267,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Pipeline.ccb.vw import predictions\n",
-    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'--coin': ['ccb|snips|0'] })\n",
-    "p = predictions.lines_2_predictions_df(open(prediction_files['--coin'][0]), pd.read_pickle(cfe[0]), '--coin')\n",
-    "p"
+    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {policy_name: ['ccb|ips_snips|0']}, window='1min')\n",
+    "coin_preestimates = PickleFiles().init(VwPredicionsFiles(coin_predictions, baseline_preds, policy_name).process(estimator.preestimate_df, path_gen=Mapper(vw_cache_folder, cfe_estimate_folder), process=True))"
    ]
   },
   {
@@ -230,12 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Pipeline.ccb.vw import predictions\n",
-    "vw_pred_openers = list(map(lambda p: (lambda f: predictions.lines_2_predictions(open(p), open(f), 'cfe')), prediction_files))\n",
-    "\n",
-    "pipeline = FilesPipeline()\n",
-    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'cfe': ['ccb|snips|0'] })\n",
-    "preestimates = pipeline.ndjson_2_csv(cfe, lambda objects: estimator.preestimate(objects, '1min'), path_gen=lambda p: p.replace('predict', 'cfe'), process=True, openers=vw_pred_openers)\n"
+    "coin_preestimates.open().resample('2min').sum()"
    ]
   },
   {
