--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -10,7 +10,9 @@
     "from Pipeline.ccb.dsjson.predictions import Predictor\n",
     "from Pipeline import azure_blob_logs\n",
     "from Pipeline.utils import Mapper\n",
-    "from Pipeline.dataflow import MultilineFiles, PickleFiles, CsvFiles, Fileset\n",
+    "from Pipeline.dataflow import MultilineFiles, PickleFiles, CsvFiles\n",
+    "\n",
+    "from Pipeline.ccb.vw.predictions import VwPredicionsFiles\n",
     "\n",
     "from pathlib import Path"
    ]
@@ -196,7 +198,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.iloc[0][\"('online', 'ccb|ips_snips|0')\"].get(type='snips')"
+    "df['online'] = df.apply(lambda r: r[\"('online', 'ccb|ips_snips|0')\"].get('ips')['e'], axis = 1)\n",
+    "df[('random', 'l')] = df.apply(lambda r: r[\"('random', 'ccb|ips_snips|0')\"].get('gaussian')['l'], axis = 1)\n",
+    "df[('random', 'u')] = df.apply(lambda r: r[\"('random', 'ccb|ips_snips|0')\"].get('gaussian')['u'], axis = 1)"
    ]
   },
   {
@@ -205,16 +209,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['online'] = df.apply(lambda r: r[\"('online', 'ccb|ips_snips|0')\"].get('ips')['e'], axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['online'].plot()"
+    "from pandas.plotting import register_matplotlib_converters\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "register_matplotlib_converters()\n",
+    "fig, ax = plt.subplots(dpi=100, figsize=[16, 6])\n",
+    "\n",
+    "ax.plot(df.index, df['online'], label='online')\n",
+    "ax.fill_between(df.index, df[('random', 'l')], df[('random', 'u')], alpha = .1)"
    ]
   },
   {
@@ -223,32 +225,6 @@
    "source": [
     "\n",
     "# Evaluate predictions from vw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Pipeline.ccb.vw import predictions\n",
-    "\n",
-    "class VwPredicionsFiles(Fileset):\n",
-    "    def _read(self, i, path):\n",
-    "        print(f'{i}: {path}')\n",
-    "        labels = self.label_fileset.read(i)\n",
-    "        labels['_tmp'] = list(predictions.lines_2_slots(open(path)))\n",
-    "        labels[('b', policy_name)] = labels.apply(lambda r: [ap[1][ap[0]] for ap in zip(r['a'], r['_tmp'])], axis = 1)\n",
-    "        return labels[['t', 'a', 'r', 'p', 'n', ('b', policy_name)]]        \n",
-    "\n",
-    "    @staticmethod\n",
-    "    def _write(path, o):\n",
-    "        raise Exception('Not supported')\n",
-    "\n",
-    "    def __init__(self, files, label_fileset, policy_name):\n",
-    "        super().__init__(files=files, reader=self._read, writer=VwPredicionsFiles._write)\n",
-    "        self.label_fileset = label_fileset\n",
-    "        self.policy_name = policy_name"
    ]
   },
   {
