--- a/notebooks/ccb_eval.ipynb
+++ b/notebooks/ccb_eval.ipynb
@@ -98,19 +98,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Pipeline.ccb.dsjson import processor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from Pipeline.ccb.dsjson.processor import Processor\n",
     "\n",
     "processor = Processor()\n",
-    "slim = MultilineFiles().init(raw.process(processor.process, path_gen=Mapper(raw_folder, slim_folder), process=True))"
+    "slim = MultilineFiles().init(raw.process(processor.process, path_gen=Mapper(raw_folder, slim_folder), process=True), procs=2)"
    ]
   },
   {
@@ -132,7 +123,7 @@
     "\n",
     "sampler = UniformSampler(0.5)\n",
     "processor = Processor(filters=[lambda l: sampler.do(l)])\n",
-    "sample = MultilineFiles().init(raw.process(processor.process, path_gen=Mapper(raw_folder, sample_folder), process=True))"
+    "sample = MultilineFiles().init(raw.process(processor.process, path_gen=Mapper(raw_folder, sample_folder), process=True), procs=2)"
    ]
   },
   {
@@ -151,7 +142,7 @@
     "from Pipeline.ccb.dsjson.predictions import Predictor\n",
     "\n",
     "predictor = Predictor(filters=[lambda l: True])\n",
-    "baseline_preds = PickleFiles().init(raw.process(predictor.predict_df, path_gen=Mapper(raw_folder, baseline_predict_folder), process=True))"
+    "baseline_preds = PickleFiles().init(raw.process(predictor.predict_df, path_gen=Mapper(raw_folder, baseline_predict_folder), process=True), procs=2)"
    ]
   },
   {
@@ -167,12 +158,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Pipeline.estimators import Estimator, evaluate\n",
+    "from Pipeline.estimators import Estimator\n",
     "import Pipeline.ccb.estimators\n",
     "import json\n",
     "\n",
-    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'baseline1_old': ['ccb|ips_snips|0'], 'random': ['ccb|ips_snips|0']}, online_estimator = 'ccb|ips_snips|0', window='1min')\n",
-    "baseline_preestimates = PickleFiles().init(baseline_preds.process(estimator.preestimate_df, path_gen=Mapper(baseline_predict_folder, baseline_estimate_folder), process=True))\n"
+    "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {'baseline1_old': ['ccb|ips_snips|0'], 'random': ['ccb|ips_snips|0', 'ccb|ips_snips|0']}, online_estimator = 'ccb|ips_snips|0', window='1min')\n",
+    "baseline_preestimates = PickleFiles().init(baseline_preds.process(estimator.preestimate, path_gen=Mapper(baseline_predict_folder, baseline_estimate_folder), process=True), procs=2)\n"
    ]
   },
   {
@@ -200,7 +191,8 @@
    "source": [
     "df['online'] = df.apply(lambda r: r[\"('online', 'ccb|ips_snips|0')\"].get('ips')['e'], axis = 1)\n",
     "df[('random', 'l')] = df.apply(lambda r: r[\"('random', 'ccb|ips_snips|0')\"].get('gaussian')['l'], axis = 1)\n",
-    "df[('random', 'u')] = df.apply(lambda r: r[\"('random', 'ccb|ips_snips|0')\"].get('gaussian')['u'], axis = 1)"
+    "df[('random', 'u')] = df.apply(lambda r: r[\"('random', 'ccb|ips_snips|0')\"].get('gaussian')['u'], axis = 1)\n",
+    "df[('random', 'e')] = df.apply(lambda r: r[\"('random', 'ccb|ips_snips|0')\"].get('ips')['e'], axis = 1)"
    ]
   },
   {
@@ -211,6 +203,7 @@
    "source": [
     "from pandas.plotting import register_matplotlib_converters\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "register_matplotlib_converters()\n",
     "fig, ax = plt.subplots(dpi=100, figsize=[16, 6])\n",
@@ -244,7 +237,7 @@
    "outputs": [],
    "source": [
     "estimator = Estimator(factory = Pipeline.ccb.estimators.create, estimators = {policy_name: ['ccb|ips_snips|0']}, window='1min')\n",
-    "coin_preestimates = PickleFiles().init(VwPredicionsFiles(coin_predictions, baseline_preds, policy_name).process(estimator.preestimate_df, path_gen=Mapper(vw_cache_folder, cfe_estimate_folder), process=True))"
+    "coin_preestimates = PickleFiles().init(VwPredicionsFiles(coin_predictions, baseline_preds, policy_name).process(estimator.preestimate, path_gen=Mapper(vw_cache_folder, cfe_estimate_folder), process=True))"
    ]
   },
   {
@@ -288,8 +281,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python38564bitfd59076926044bd899f4541e1d3f6749",
-   "display_name": "Python 3.8.6 64-bit"
+   "display_name": "Python 3.8.5 64-bit",
+   "language": "python",
+   "name": "python38564bitfd59076926044bd899f4541e1d3f6749"
   },
   "language_info": {
    "codemirror_mode": {
@@ -301,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6-final"
+   "version": "3.8.6"
   },
   "metadata": {
    "interpreter": {
